job page finished, carasole fixed

--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-elements": "^1.1.0",
+    "react-native-snap-carousel": "^3.7.5",
     "react-navigation": "^3.9.1",
-    "styled-components": "^4.2.0",
-    "react-native-sideswipe": "^1.4.2"
+    "styled-components": "^4.2.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
