--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "expo": "^32.0.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-elements": "^1.1.0",
+    "react-native-picker-select": "^6.1.0",
+    "react-native-simple-radio-button": "^2.7.3",
     "react-native-snap-carousel": "^3.7.5",
     "react-navigation": "^3.9.1",
     "styled-components": "^4.2.0"
